style.css
* {
    border: 1px solid red;
}

body {
    font-family: 'Roboto', sans-serif;   
    margin: 0px; 
}

.container {
    width: 80%;
    margin: 0 auto;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    padding-left: 50px;
    padding-right: 20px;
}

.logo-text {
    font-size: 24px;
    color: #F9FAF8;
}

.nav ul {
    display:flex;    
    justify-content: flex-end;
    align-items: flex-end;
    list-style-type: none;
    margin: 0;
    padding: 0;
    gap: 20px;
}

.links a {
    font-size: 18px;
    color: #E5E7EB;
    text-decoration: none;
}

.hero {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    gap: 40px;
    padding-left: 50px;
    padding-right: 50px;
    padding-bottom: 40px;
}

.hero-content {
    max-width: 500px;
}

h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

p {
    font-size: 18px;
    color: #E5E7EB;
}

button {
    background-color: #3882F6;
    color: white;
    border-radius: 8px;
    font-weight: bold;
    padding: 10px 20px; 
    border: none;   
}

.image-placeholder{
    width: 500px;
    height: 220px;
    background-color: gray;
    color: white;
    display: flex;
    justify-content: center;
    align-items:center ;
}

/* info */
.info {
    padding: 60px 0;
    text-align: center;
}

.info h2 {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
}

.info-boxes {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    flex-wrap: wrap;
}

.info-items {
    max-width: 150px;
}

.box {
    width: 150px;
    height: 150px;
    border: 3px solid #3882F6;
    border-radius: 12px;
    margin-bottom: 10px;
}

.info-items p {
    font-size: 14px;
    color: gray;
}

/* quote */
.quote {
    background-color: #E5E7EB;
    padding: 80px 0;
}

.quote-text {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    color: #1F2937;
    margin: 0;
}

.quote-author {
    text-align: end;
    font-weight:bold;
    color:#1F2937;    
    padding-right: 20px;    
}

/* cta */
.cta {
    padding: 80px 0;
}

.cta-box {
    background-color: #3882F6;
    color: white;
    padding: 40px;
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.cta-text h3 {
    margin: 0px;
    font-size: 20px;
}

.cta-text p {
    margin: 5px 0 0;
    color: #E5E7EB;
}

.cta-btn {
    background-color: transparent;
    border: 2px solid white;
    border-radius: 8px;
    padding: 10px 20px;
    font-weight: bold;   
}

/* footer */

footer {
    background: #1F2937;
    color:white;
    text-align: center;
    padding: 20px;
    font-size: 14px;
}

